--- a/about.html
+++ b/about.html
@@ -17,17 +17,31 @@
 	<main class="container">
 		<section class="textos">
 			<h1 class="textos-titulo">
+				<br>
 				Sobre mim 
 			</h1>
 			<div class="textos-paragrafos">
 				<p class="textos-paragrafos-p1">
-					Sou Thiago Ferreira, nascido e criado em São Carlos, SP, lugar onde me graduei em matemática aplicada e computação científica pelo instituto de ciências matemáticas e de computação da universidade de São Paulo.
+					Sou Thiago Ferreira, nascido e criado em São Carlos, SP,
+					lugar onde me graduei em matemática aplicada e computação científica pelo instituto de
+					ciências matemáticas e de computação da universidade de São Paulo.
 				</p>
 				<p class="textos-paragrafos-p2">
-					Durante minha graduação tive a oportunidade de conhecer diversos projetos extracurriculares e realizar uma iniciação científica, o que foi muito importante para complementar meu aprendizado e minha formação. 
+					Durante minha graduação tive a oportunidade de conhecer diversos projetos extracurriculares
+					e realizar uma iniciação científica, o que foi muito importante para complementar meu
+					aprendizado e minha formação.
 				</p>
-				<p class="textos-paragrafos-p2">
-					Hoje estou em busca de um ambiente profissional dinâmico e favorável ao aprendizado que se alinhe ao meu desejo maior de continuar me especializando e me aprofundando. 
+				<p class="textos-paragrafos-p3">
+					Hoje atuo como cientista de dados da Startup de incentivo de vendas *Incentivar.
+					Aplico a atuação de mecânicas sore a atualçao de colaboradores de diversos clientes
+					buscando aumentar seu desempenho.
+					Valorizo este ambiente dinâmico e favorável ao aprendizado.
+				</p>
+				<p class="textos-paragrafos-p4">
+					Paralelamente ao meu trabalho, estou cursando um MBA em Data Science pela
+					Esalq-USP. Este meio está complementando as habilidades técnicas que o
+					emprego exige e me coloca em contato com o meio empresarial que a minha
+					formação, mais acadêmica, não cobriu totalmente.
 				</p>
 			</div>
 		</section>	
