--- a/curriculo.html
+++ b/curriculo.html
@@ -18,13 +18,29 @@
 		<section class="texto">
 			<div class="texto-info">
 				<h2 class="texto-titulo">
+					<br>
 					Informações pessoais
 				</h2>
 				<ul class="texto-lista">
-					<li>Thiago Ferreira - 29 anos</li>
+					<li>Thiago Ferreira - 31 anos</li>
 					<li>thiagoferreira9594@gmail.com</li>
 					<li>(16) 9 9743 4067</li>
-					<li>São Carlos, São Paulo, Brasil.</li>
+					<li>São Paulo, Brasil.</li>
+				</ul>
+			</div>
+			<div class="texto-graduacao">
+				<h2 class="texto-titulo">
+					MBA
+				</h2>
+				<p class="texto-graduacao-paragrafo">
+					MBA em Data Science e Analytcs oferecido pela Esalq-USP.<br>
+					Relacionando aspectos que trabalhei durante a minha graduação com o mercado de trabalho e
+					contribuindo para tornar todo o conhecimento acumulado em soluções produtivas.<br>
+					Complementando o conhecimento técnico com as ferramentais mais utilizadas pelo mercado.
+				</p>
+				<ul class="texto-graduacao-lista">
+					<li><span style="font-weight: bold" class="negrito">Início:</span> 06/2025</li>
+					<li><span style="font-weight: bold" class="negrito">Formatura prevista:</span> 12/2026</li>
 				</ul>
 			</div>
 			<div class="texto-graduacao">
@@ -32,11 +48,29 @@
 					Graduação
 				</h2>
 				<p class="texto-graduacao-paragrafo">
-					Bacharel em matemática aplicada e computação científica pelo instituto de ciências matemáticas e de computação da universidade de São Paulo.
+					Bacharel em matemática aplicada e computação científica pelo
+					instituto de ciências matemáticas e de computação da universidade de São Paulo.
 				</p>
 				<ul class="texto-graduacao-lista">
-					<li> <span class="negrito">Iniciação científica:</span> Clusterização categórica: análise de dados clínicos de pacientes diagnosticados com câncer.</li>
-					<li><span class="negrito">TCC:</span> A integral de Henstock-Kurzweil, seus precedentes e resultados fundamentais.</li>
+					<li><span style="font-weight: bold" class="negrito">Formatura:</span> 12/2023</li>
+					<li><span style="font-weight: bold" class="negrito">Iniciação científica:</span> Clusterização categórica: análise de dados clínicos de pacientes diagnosticados com câncer.</li>
+					<li><span style="font-weight: bold" class="negrito">TCC:</span> A integral de Henstock-Kurzweil, seus precedentes e resultados fundamentais.</li>
+				</ul>
+			</div>
+			<div class="texto-graduacao">
+				<h2 class="texto-titulo">
+					Experiência
+				</h2>
+				<p class="texto-graduacao-paragrafo">
+					<span style="font-weight: bold" class="negrito">Incentivar*</span><br>
+					Startup de incentivo de vendas cujo objetivo é auxiliar o time cliente a atingir metas
+					por meio dos dados fornecidos.<br>
+					Como cientista de dados meu objetivo é auxiliar na trativa dos dados recebidos,
+					realizar apurações dos vendedores de acordo com as mecânicas estabelecidas e desenvolver
+					medidas preditivas por meio de modelos estatísticos objetivando maximizar um quesito específico.
+				</p>
+				<ul class="texto-graduacao-lista">
+					<li><span style="font-weight: bold" class="negrito">Período:</span> 12/2024 - Atual</li>
 				</ul>
 			</div>
 			<div class="texto-hs">
@@ -44,14 +78,17 @@
 					Hard Skils
 				</h2>
 				<ul class="texto-hs-lista">
-					<li>Inglês avançado</li>
+					<li>Inglês</li>
+					<li>Machine Learning</li>
+					<li>Análise Estatística</li>
+					<li>Criação de Dashboards</li>
+					<li>Python</li>
+					<li>R</li>
+					<li>SQL</li>
 					<li>C/C++</li>
 					<li>HTML/CSS</li>
 					<li>Javascript</li>
 					<li>Java</li>
-					<li>Python - análise de dados</li>
-					<li>R</li>
-					<li>SQL - básico</li>
 				</ul>
 			</div>
 			<div class="texto-cursos">
@@ -59,12 +96,8 @@
 					Minicursos
 				</h2>
 				<ul class="texto-cursos-lista">
-					<li><span class="negrito">Lógica de programação:</span> Mergulhe em programação com Javascript-6h</li>
-					<li><span class="negrito">Lógica de programação:</span> Explore funções e listas-6h</li>
-					<li><span class="negrito">HTML e CSS:</span> Ambientes de desenvolvimento, estrutura de arquivos e tags-8h</li>
-					<li><span class="negrito">HTML e CSS:</span> Classes posicionamento e flexbox-8h</li>
-					<li><span class="negrito">HTML e CSS:</span>Cabeçalho, footer e variável CSS-6h</li>
-					<li><span class="negrito">HTML e CSS:</span>Trabalhando com responsividade e publicação de projetos-6h</li>
+					<li>Lógica de programação em Javascript - 12h</li>
+					<li>HTML e CSS - 28h</li>
 				</ul>
 			</div>
 		</section>
