--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 	<main class="container">
 		<section class="textos">
 			<h1 class="textos-titulo">
+				<br>
 				Olá, bem-vinda(o) ao meu perfil profissional 
 			</h1>
 			<p class="textos-descricao">
-				Sou <strong class="textos-descricao-nome">Thiago Ferreira</strong>, desenvolvedor e cientista de dados apaixonado por resolver problemas e aprender habilidades novas todos os dias. Aqui você pode conhecer um pouco mais sobre quem sou, minhas habilidades e um breve portfólio com alguns projetos pessoais.
+				Sou <strong class="textos-descricao-nome">Thiago Ferreira</strong>,
+				Matemático por formação e Cientista de dados por paixão.<br>
+				Carrego em mim desejo constante de resolver problemas e aprendender habilidades novas.<br>
+				Aqui você pode conhecer um pouco mais sobre quem sou, minhas habilidades e um
+				breve portfólio com alguns projetos pessoais.
 			</p>
 			<div class="textos-caixabotoes">
 				<h2 class="textos-caixabotoes-titulodosbotoes">Acesse minhas redes:</h2>
@@ -38,18 +43,3 @@
 	</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
